--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,28 @@ ul {
     background-color: #abff07;
 }
 
+.login {
+    display: flex;
+    align-items: center;
+}
+
+.viewBtn {
+    display: none;
+}
+
+.exitBtn {
+    width: 100%;
+    height: 40px;
+    display: none;
+    background: #000000;
+    border: none;
+    border-bottom: 1px solid yellow;
+    color: aliceblue;
+    font-size: 20px;
+    font-weight: 900;
+    cursor: pointer;
+}
+
 .login button {
     width: 58px;
     height: 33px;
@@ -51,8 +73,6 @@ ul {
     border-radius: 4px;
     font-size: 11px;
     line-height: 13px;
-    display: flex;
-    align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
     transition: all ease-in-out .2s;
@@ -66,11 +86,12 @@ ul {
 }
 
 .container {
-    width: 600px;
+    width: 80%;
     margin: auto;
 }
 
-.container h2 {
+h2 {
+    margin: auto;
     font-weight: 700;
     font-size: 36px;
     line-height: 42px;
@@ -100,6 +121,7 @@ ul {
 }
 
 .currency-types li {
+    width: 100%;
     height: 30px;
     padding: 0 21px;
     display: flex;
@@ -124,8 +146,12 @@ ul {
     cursor: pointer;
 }
 
+.col {
+    width: 45%;
+}
+
 .result {
-    width: 263px;
+    width: 100%;
     height: 102px;
     border: 1px solid #E5E5E5;
     box-sizing: border-box;
