--- a/css/style.css
+++ b/css/style.css
@@ -177,3 +177,48 @@ h2 {
     color: #C6C6C6;
     padding-left: 14px;
 }
+
+@media screen and (max-width:864px) {
+    #header {
+        justify-content: space-between;
+        padding: 7px 21px;
+    }
+    .menu {
+        width: 200px;
+        height: 100%;
+        background-color: #000000;
+        color: #FFFFFF;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .menu .menu-list {
+        display: block;
+    }
+    .menu,
+    .loginBtn {
+        display: none;
+    }
+    .viewBtn {
+        display: block;
+    }
+}
+
+@media screen and (max-width:710px) {
+    .row {
+        display: block;
+    }
+    .col {
+        width: 100%;
+        margin: auto;
+        margin-bottom: 40px;
+    }
+    .currency-types li {
+        width: 100%;
+    }
+    h2 {
+        font-size: 24px;
+        margin-top: 32px;
+        margin-bottom: 27px;
+    }
+}
