--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body,
 h2,
 p {
@@ -171,7 +172,8 @@ h2 {
     outline: none;
     overflow: hidden;
 }
-.result input:disabled{
+
+.result input:disabled {
     background-color: transparent;
 }
 
@@ -183,11 +185,25 @@ h2 {
     padding-left: 14px;
 }
 
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
 @media screen and (max-width:864px) {
     #header {
         justify-content: space-between;
         padding: 7px 21px;
     }
+
     .menu {
         width: 200px;
         height: 100%;
@@ -197,13 +213,16 @@ h2 {
         right: 0;
         top: 0;
     }
+
     .menu .menu-list {
         display: block;
     }
+
     .menu,
     .loginBtn {
         display: none;
     }
+
     .viewBtn {
         display: block;
     }
@@ -213,14 +232,17 @@ h2 {
     .row {
         display: block;
     }
+
     .col {
         width: 100%;
         margin: auto;
         margin-bottom: 40px;
     }
+
     .currency-types li {
         width: 100%;
     }
+
     h2 {
         font-size: 24px;
         margin-top: 32px;
